# monorace_datagen

./: .gitignore  README.md
src/mav_simulator/: README.md
src/mav_simulator/mav_bringup/: CMakeLists.txt  package.xml
src/mav_simulator/mav_bringup/launch/: mav_init.launch.py
src/mav_simulator/mav_description/: CMakeLists.txt  package.xml
src/mav_simulator/mav_description/launch/: mav_description.launch.py
src/mav_simulator/mav_description/models/X3/: model.config  model.sdf
src/mav_simulator/mav_description/models/camera_rig/: model.config  model.sdf
src/mav_simulator/mav_description/rviz/: mav.rviz
src/mav_simulator/mav_description/urdf/: x3_description.urdf.xacro
src/mav_simulator/mav_gazebo/: CMakeLists.txt  package.xml
src/mav_simulator/mav_gazebo/config/: gz_bridge.yaml
src/mav_simulator/mav_gazebo/launch/: warehouse.launch.py
src/mav_simulator/mav_gazebo/models/55gal_drum/1/: base_visual.dae  model.sdf
src/mav_simulator/mav_gazebo/models/cable_spool/1/: base_visual.dae  model.sdf
src/mav_simulator/mav_gazebo/models/distribution_warehouse/1/: base_visual.mtl
src/mav_simulator/mav_gazebo/models/double_gate/: model.config  model.sdf
src/mav_simulator/mav_gazebo/models/double_gate/meshes/: double_gate.dae
src/mav_simulator/mav_gazebo/models/dumpster_large/1/: base_visual.dae  model.sdf
src/mav_simulator/mav_gazebo/models/forklift/1/: base_visual.dae  model.sdf
src/mav_simulator/mav_gazebo/models/generator/1/: base_visual.dae  model.sdf
src/mav_simulator/mav_gazebo/models/orange_double_gate/: model.config  model.sdf
src/mav_simulator/mav_gazebo/models/orange_double_gate/meshes/: orange_double_gate.dae
src/mav_simulator/mav_gazebo/models/orange_single_gate/: model.config  model.sdf
src/mav_simulator/mav_gazebo/models/orange_single_gate/meshes/: orange_single_gate.dae
src/mav_simulator/mav_gazebo/models/single_gate/: model.config  model.sdf
src/mav_simulator/mav_gazebo/models/single_gate/meshes/: single_gate.dae
src/mav_simulator/mav_gazebo/models/stock_pavilion/: model.config  model.sdf
src/mav_simulator/mav_gazebo/models/stock_pavilion/meshes/: stock_pavilion.dae  stock_pavilion.mtl
src/mav_simulator/mav_gazebo/scripts/: odom_to_tf.py
src/mav_simulator/mav_gazebo/worlds/: x3_a2rl_warehouse.world  x3_a2rl_warehouse_harmonic.world  x3_illini_pavilion.world  x3_illini_warehouse.world
src/pencilnet_ros/: package.xml  setup.cfg  setup.py
src/pencilnet_ros/config/: pencilnet_default.yaml
src/pencilnet_ros/launch/: data_gen.launch.py
src/pencilnet_ros/pencilnet_ros/: camera_model.py  data_generator_node.py  world_config.py
tools/: inspect_dataset.py
